--- a/workboards/package.json
+++ b/workboards/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "start": "vite preview",
+     "build:staging": "vite build --mode staging",
+    "dev:local": "vite --mode local", 
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
